Style About page and fix layout issues on small screen sizes

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,12 @@
 a.active {
   text-decoration: underline;
-  text-underline-offset: 7px; 
+  text-underline-offset: 7px;
 }
 
 .home-section {
   position: relative;
   height: 85vh;
-  background-image: url(./bg.jpg); 
+  background-image: url(./bg.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -18,11 +18,19 @@ a.active {
   left: 0;
   right: 0;
   bottom: 0;
-  background: rgba(0, 0, 0, 0.4); 
+  background: rgba(0, 0, 0, 0.4);
   z-index: 1;
 }
 
 .home-container {
   position: relative;
-  z-index: 2; 
+  z-index: 2;
+}
+
+.about-section {
+  height: 85vh;
+}
+
+.about-text {
+  max-width: 350px;
 }
